--- a/scrapy.cfg
+++ b/scrapy.cfg
@@ -4,8 +4,8 @@
 # https://scrapyd.readthedocs.org/en/latest/deploy.html
 
 [settings]
-default = eleme.settings
+default = waimai.settings
 
 [deploy]
 #url = http://localhost:6800/
-project = eleme
+project = waimai
